<resources>
    <string name="app_name">SinBike</string>

    <string name="Google_MAPS_API_Key">AIzaSyAbdg7e4xDXnRqj5jWjddeR_onCEbvBZLA</string>

    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>

    <!-- intro -->
    <string name="introBtn">Start Riding</string>
    <string name="slide1Title">Locate</string>
    <string name="slide2Title">Unlock</string>
    <string name="slide3Title">Ride</string>
    <string name="slide1Description">Locate the bikes on the map.</string>
    <string name="slide2Description">Scan the QR Code on the bike to unlock.</string>
    <string name="slide3Description">Enjoy the convenient ride.</string>
    <string name="dots">Indicator Dots</string>

    <!-- Authentication -->
    <string name="ride">RIDE</string>
    <string name="signup">SIGN UP</string>
    <string name="signin">SIGN IN</string>
    <string name="username">USERNAME</string>
    <string name="pwd">PASSWORD</string>
    <string name="email">EMAIL ADDRESS</string>
    <string name="cPwd">CONFIRM PASSWORD</string>
    <string name="googleSignIn">Sign in with Google</string>
    <string name="join">Join SingBike</string>
    <string name="signInBanner"><u>Already have an account?</u></string>

    <!-- error message -->
    <string name="runtime_error">Runtime Error!</string>
    <string name="uname_err">Username Must be at least 4 characters long.</string>
    <string name="email_err">Invalid Email Format</string>
    <string name="pwd_err_length">Password must contain at least 8 charaters</string>
    <string name="pwd_err_chars">Password must contain at least 1 Capital Letter, 1 Small Letter and 1 digit.</string>
    <string name="confirm_pwd_err">Passwords do not match.</string>
    <string name="server_error">Can\'t Connect to Server</string>
    <string name="sign_up_fail">Sign Up Failed! Try Again!</string>
    <string name="sign_in_fail">Invalid Credentials</string>

    <!-- permission request messages -->
    <string name="allow">Allow</string>
    <string name="never">Never</string>
    <string name="camera_request">You must allow the app to use camera to unlock a bike:)</string>
    <string name="file_request">Do you want to allow SinBike to access your image files?</string>

    <!-- navigation menu -->
    <string name="home">HOME</string>
    <string name="booking">BOOKINGS</string>
    <string name="activity">ACTIVITY</string>
    <string name="account">ACCOUNT</string>

    <!-- home tab -->
    <string name="unlock">UNLOCK</string>
    <string name="dollar">$</string>
    <string name="balance">Balance</string>
    <string name="credit_score">Credit Score</string>
    <string name="one_hundred">100</string>
    <string name="points">Pts</string>
    <string name="unlock_now">UNLOCK NOW</string>
    <string name="unlock_bike">UNLOCK BIKE</string>
    <string name="scan_qr">SCAN QR CODE</string>
    <string name="manual_unlock">KEY IN BIKE ID</string>
    <string name="enter_bikeID">Enter Bike ID</string>
    <string name="reserve_now">RESERVE NOW</string>
    <string name="reserve_confirm">Confirm Reservation</string>
    <string name="reserve_question">You are about to make a bike reservation!</string>
    <string name="confirm">Confirm</string>
    <string name="low_balance">You must have at least 5$ in your wallet to make a ride. Please top up.</string>

    <!-- riding screen -->
    <string name="dummy_time_ride">00:00</string>
    <string name="dummy_kilo">0.00</string>
    <string name="time_label">time</string>
    <string name="kilo_label">Kilometres</string>
    <string name="finish_ride">Finish Ride</string>
    <string name="ride_summary">Ride Summary</string>
    <string name="promo_hint">Promo Code: GET2D</string>
    <string name="apply_promo">Apply</string>
    <string name="make_payment">Make Payment</string>

    <!-- account tab -->
    <string name="edit_profile">Edit Profile</string>
    <string name="join_on">Joined on</string>
    <string name="last_update">Last Updated</string>
    <string name="change_pwd">Change Password</string>
    <string name="upload_avatar">Upload New Avatar</string>
    <string name="update">UPDATE PROFILE</string>
    <string name="choose_gallery">Choose From Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="dummy_time">1.3</string>
    <string name="dummy_distance">7.9</string>
    <string name="hours">Hours</string>
    <string name="km_travelled">Km Travelled</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_question">Are you sure that do you want to delete your account? All your data will be lost.</string>
    <string name="understand">I understand. Delete.</string>
    <string name="jk">Just Kidding. No</string>
    <string name="goodbye">Good Bye! Sorry to letting you go. Hope to see you again.</string>

    <!-- credit score page -->
    <string name="what_is_credit_score">What is a credit score?</string>
    <string name="status_success">Great Job! You are such a great rider!</string>

    <!-- change password -->
    <string name="currentPassword">Current Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="notMatch">* Passwords Do Not Match.</string>
    <string name="currentPasswordEmpty">Please Enter Current Password</string>
    <string name="currentPasswordWrong">Authentication Failed. Incorrect Password!</string>
    <string name="newPasswordEmpty">Please Enter New Password</string>
    <string name="confirmPasswordEmpty">Please Enter the Confirm Password</string>
    <string name="passwordNotMatch">Passwords are not matched!</string>
    <string name="networkError">Network Error. Please Check your connection</string>

    <!-- account options -->
    <string name="contact">CONTACT</string>
    <string name="wallet">WALLET</string>
    <string name="achievements">ACHIEVEMENTS</string>

    <!-- account tab options array -->
    <string-array name="account_options">
        <item>Achievements</item>
        <item>Wallet</item>
        <item>Ride History</item>
        <item>Help Centre</item>
        <item>Report</item>
        <item>Log Out</item>
    </string-array>

    <!-- achievements -->
    <string name="loading_achievement">Loading Achievements …</string>
    <string-array name="achievements">
        <item>Complete 10 rides.</item>
        <item>Complete 20 rides.</item>
        <item>Complete 50 rides.</item>
        <item>Complete 75 rides.</item>
        <item>Complete 100 rides.</item>
        <item>Ride 3 km.</item>
        <item>Ride 5 km.</item>
        <item>Ride 10 km.</item>
        <item>Ride 15 km.</item>
    </string-array>

    <string-array name="achievements_titles">
        <item>Complete 10 rides.</item>
        <item>Complete 20 rides.</item>
        <item>Complete 50 rides.</item>
        <item>Complete 75 rides.</item>
        <item>Complete 100 rides.</item>
        <item>Ride 3 km.</item>
        <item>Ride 5 km.</item>
        <item>Ride 10 km.</item>
        <item>Ride 15 km.</item>
    </string-array>

    <integer-array name="achievements_goals">
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
    </integer-array>

    <string-array name="achievements_rewards">
        <item>1.50</item>
        <item>3.00</item>
        <item>5.00</item>
        <item>10.00</item>
        <item>15.00</item>
        <item>1.00</item>
        <item>2.00</item>
        <item>5.00</item>
        <item>7.00</item>
    </string-array>

    <!-- ride history -->
    <string name="promo_code">Promo Fare</string>
    <string name="total_fare">Total Fare</string>
    <string name="ride_fare">Ride Fare</string>
    <string name="ride_id">Ride ID:</string>
    <string name="report_problem">Report a Problem</string>
    <string name="ride_time">Ride Time: </string>
    <string name="minutes">minutes</string>

    <!-- report -->
    <string name="report_header">How Can We Help You?</string>
    <string name="report_title">Title</string>
    <string name="problem_topic_title">Related Problem:</string>
    <string name="report_description">Please Describe Your Problem.</string>
    <string name="add_attachment">Add Attachments</string>
    <string name="submit">Submit</string>
    <string name="submitting">Submitting …</string>
    <string-array name="problem_topics">
        <item>Application</item>
        <item>Vandalism</item>
        <item>Bikes</item>
        <item>Others</item>
    </string-array>

    <!-- share preference keys -->
    <string name="authState">AUTH_STATE</string>
    <string name="firstStartUp">FIRST_TIME_START_UP</string>
    <string name="isSignedin">IS_SIGNED_IN</string>
    <string name="userID">USER_ID</string>
    <string name="savedCards">CREDIT_CARDS</string>

    <!-- wallet tab -->
    <string name="availableBalance">Available Balance</string>
    <string name="transactionHistory">Transaction History</string>
    <string name="transactionInfo">Transaction Info</string>
    <string name="sgd">SGD</string>
    <string name="topup">Top Up</string>
    <string name="transactionTime">Time:</string>
    <string name="transactionType">Transaction Type:</string>
    <string name="transactionAmount">Transaction Amount:</string>
    <string name="enterManual">Enter Amount</string>
    <string name="dummyAmount">5.0</string>
    <string name="quickTopUp">Quick Top Up</string>
    <string name="paymentMethod">Payment Method</string>
    <string name="addNewCard">Add New Card</string>
    <string name="cards">Cards</string>
    <string name="cardNum">Card Number</string>
    <string name="nameOnCard">Name on Card</string>
    <string name="expiryDate">Expriy</string>
    <string name="cvc">CVC</string>
    <string-array name="quickTopUpAmounts">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>

    <!-- booking tab -->
    <string name="creatingReservation">Making Reservation …</string>
    <string name="loadingReservations">Loading Booking …</string>
    <string name="reservation">Reservation</string>
    <string name="expire_at">End Time</string>
    <string name="singleBooking">Booking</string>
    <string name="bookingDetails">Booking Details</string>
    <string name="currentBooking">Current Booking(s)</string>
    <string name="cancelReservation">Cancel Reservation</string>
    <string name="bookHistory">Booking History</string>
    <string name="bookTime">Time</string>
    <string name="bookingDate">Date</string>
    <string name="status">Booking Status :</string>
    <string name="completed">Trip Completed</string>
    <string name="cancelled">Trip Cancelled</string>
    <string name="bikeID">Bike ID :</string>
    <string name="bikeDetails">Bike Details</string>
    <string name="reservation_in_progress">You current have only one active reservation. One user can make one reservation at a time. Sorry for the inconvenience:)</string>
    <string name="reservation_success1">You have reserved a bike for 10 minutes.</string>
    <string name="reservation_success2">After 10 minutes, the bike you reserved will be released back to other users.</string>


    <!-- Ride History -->
    <string name="ride_history">Ride History</string>
    <string name="ride_details">Ride Details</string>
    <string name="recent_rides">Recent Rides</string>

</resources>