<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/colorPrimary"
        android:padding="5dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/reserve_now"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:text="@string/reserve_confirm"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/reserve_question"
        android:textStyle="bold"
        android:textSize="16sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bikeID"
            android:layout_margin="10dp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:id="@+id/bikeID_Reservation"
            android:textStyle="bold"
            android:textSize="16sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:gravity="center">

        <Button
            android:id="@+id/cancel_button_Reservation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="0.5"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/confirm_button_Reservation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_weight="0.5"
            android:textColor="@color/actionBtn"
            style="?android:attr/buttonBarButtonStyle" />


    </LinearLayout>

</LinearLayout>