<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:elevation="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp"
        android:translationZ="10dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name"
            />

        <TextView
            android:id="@+id/rideDetailsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/ride_summary"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ride_time"
                android:textColor="@color/darkGray"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/rideTime_RideSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ride_id"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes"
                android:textColor="@color/gray"
                android:layout_marginHorizontal="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ride_fare"
                android:textColor="@color/darkGray"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/rideFare_RideSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ride_fare"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sgd"
                android:layout_marginHorizontal="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/promoCodeET"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:padding="10dp"
                android:hint="@string/promo_hint"
                android:autofillHints="promo hint"
                android:textAllCaps="true"
                android:background="@drawable/border_layout"
                android:inputType="text"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/promoApplyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/apply_promo"
                android:textStyle="bold"
                android:textAppearance="@style/TextButtonStyle"
                android:textColor="@color/actionBtn"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/promo_code"
                android:textColor="@color/darkGray"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/promoFare_RideSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_fare"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sgd"
                android:layout_marginHorizontal="5dp"
                />

        </LinearLayout>

        <include layout="@layout/divider_horizontal_2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_fare"
                android:textColor="@color/darkGray"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/totalFare_RideSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_fare"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sgd"
                android:layout_marginHorizontal="5dp"
                />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/makePaymentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/make_payment"
        android:textStyle="bold"
        android:textAppearance="@style/TextButtonStyle"
        android:textColor="@color/actionBtn"
        />

</LinearLayout>