<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:orientation="horizontal"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/bookingIndicatorIcon"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_margin="15dp"
        android:src="@drawable/calendar"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/bookingTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookTime"
                android:textStyle="bold"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/bookingDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookingDate"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bookingStatusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/completed"
                android:textColor="@color/green"
                />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darkGray"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</LinearLayout>